--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Aesthetic loookup</title>
-</head>
-<body>
-    <form class="container" id="locSearch">
-        <h2>
-            Mock Aesthetic Lookup
-        </h2>
-        <input type="text" placeholder="Search!" id="search">
-        <button id="searchBtn">Click Me!</button>
-    </form>
-    <div id="searchResults"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./assets/js/script.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+        <title>Document</title>
+    </head>
+    <body>
+        
+        <div class="container">
+            <h2>Aesthetic Search Engine</h2>
+            <input type="text" placeholder="Enter keywords here..." id="search">
+            <select name="format" id="format">
+                <option value="select">Select a media type...</option>
+                <option value="pictures">Pictures</option>
+                <option value="gifs">Gifs</option>
+                <option value="landscapes">Landscapes</option>
+                <option value="paintings">Paintings</option>
+            </select>
+            <button id="searchBtn">Search</button>
+        </div>
+        <div id="searchResults"></div>
+
+        <script src="./assets/js/script.js"></script>
+    </body>
 </html>
