--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 </head>
 
 <body>
+    <!-- This <a> tag #top is the point that the Return To Page href referenced in the footer takes you to.-->
     <a id='top'></a>
     <!-- Header -->
     <header class="header">
-        <h1>Aesthetic Search</h1>
+        <h1>Aesthetic Search Engine</h1>
     </header>
 
-    <!-- Hero -->
+    <!-- Hero Banner. Width and Height of images adjusted here instead of css. -->
     <section class="hero">
         <img src="./assets/images/girl.jpg" width="200" height="200">
         <img src="./assets/images/art.jpg" width="200" height="200">
@@ -37,11 +38,12 @@
         
     </section>
 
-    <!-- Footer -->
+    <!-- Footer. Font color of h3 and the href tags adjusted here instead of css.-->
     <footer class="footer">
         <div class="footer-right" style="color: lavenderblush">
             <h3>Contact Us:</h3>
             <a href = "lisa_c_swain@hotmail.com" style="color: lavenderblush">Email</a>
+            <!-- This href tag takes you to the top of the webpage.-->
             <a href = "#top" style="color: lavenderblush">Return To Top</a>
         </div>
     </footer>
