--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
-    <title>Aesthetic Search</title>
+    <title>Aesthetic Search Engine</title>
 
 	<!--Additional elements for browsers and robots go here goes here-->
 
