Functionality for history buttons

--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
         <div class="container">
             <h2>Aesthetic Search Engine</h2>
             <input type="text" placeholder="Enter keywords here..." id="search">
-            <select name="format" id="format">
-                <option value="select">Select a media type...</option>
-                <option value="pictures">Pictures</option>
-                <option value="gifs">Gifs</option>
-                <option value="landscapes">Landscapes</option>
-                <option value="paintings">Paintings</option>
+            <select name="format" id="format">  
+                <option id="1" value="Pictures">Pictures</option>
+                <option id="2" value="Gifs">Gifs</option>
+                <option id="3" value="Landscapes">Landscapes</option>
+                <option id="4" value="Paintings">Paintings</option>
             </select>
             <button id="searchBtn">Search</button>
         </div>
         <div id="searchResults"></div>
+        <div id="history">
 
+        </div>
         <script src="./assets/js/script.js"></script>
     </body>
 </html>
