--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"/>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
     <title>Aesthetic Search Engine</title>
 
 	<!--Additional elements for browsers and robots go here goes here-->
@@ -15,10 +15,8 @@
 </head>
 
 <body>
-    <!-- This <a> tag #top is the point that the Return To Page href referenced in the footer takes you to.-->
-    <a id='top'></a>
     <!-- Header -->
-    <header>
+    <header id="top">
         <h1>Aesthetic Search Engine</h1>
     </header>
 
@@ -48,12 +46,8 @@
             <button id="searchBtn">Search</button>
         </div>
         <div id="searchResults"></div>
-        <div id="history">
-
-        </div>
-        <div id="searchResults"></div>       
-    </main>
-
+    </main>       
+    
     <!-- Footer. Font color of h3 and the href tags adjusted here instead of css.-->
     <footer>
         <div class="footer-right" style="color: lavenderblush">
@@ -61,9 +55,16 @@
             <a href = "lisa_c_swain@hotmail.com" style="color: lavenderblush">Email</a>
             <!-- This href tag takes you to the top of the webpage.-->
             <a href = "#top" style="color: lavenderblush">Return To Top</a>
+            <button id="showHistory">
+                History
+            </button>
         </div>
     </footer>
-
+    <div id="history">
+        <span class="close">&#10006;</span>
+        <span class="historyContent"></span>
+    </div>
+    
     <script src="./assets/js/script.js"></script>
 </body>
 
