--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <div id="history">
         <span class="close">&#10006;</span>
         <span class="historyContent"></span>
+        <button class="reset">Reset</button>
     </div>
     
     <script src="./assets/js/script.js"></script>
