Changed history reset text from reset to Clear History

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="history">
         <span class="close">&#10006;</span>
         <span class="historyContent"></span>
-        <button class="reset">Reset</button>
+        <button class="reset">Clear History</button>
     </div>
     
     <script src="./assets/js/script.js"></script>
