--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <footer>
         <div class="footer-right" style="color: lavenderblush">
             <h3>Contact Us:</h3>
-            <h3>Email: <a href = "mailto: lisa_c_swain@hotmail.com" style="color: lavenderblush">lisa_c_swain@hotmail.com</a></h3>
+            <h3>Email lisa_c_swain@hotmail.com <a href = "mailto: lisa_c_swain@hotmail.com" style="color: lavenderblush">&#9993;</a></h3>
             <!-- This href tag takes you to the top of the webpage.-->
             <a href = "#top" style="color: lavenderblush">Return To Top</a>
             <button id="showHistory">
