Added selection that was accidentally removed

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
         <div class="container">
             <h2>Aesthetic Search Engine</h2>
             <input type="text" placeholder="Enter keywords here..." id="search">
-            <select name="format" id="format">  
-                <option id="1" value="Pictures">Pictures</option>
-                <option id="2" value="Gifs">Gifs</option>
-                <option id="3" value="Landscapes">Landscapes</option>
-                <option id="4" value="Paintings">Paintings</option>
+            <select name="format" id="format">
+                <option value="none">Enter media type</option>
+                <option value="Pictures">Pictures</option>
+                <option value="Gifs">Gifs</option>
+                <option value="Landscapes">Landscapes</option>
+                <option value="Paintings">Paintings</option>
             </select>
             <button id="searchBtn">Search</button>
         </div>
